k8s-nginx-virtual-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: harness-delegate-ng
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
