k8s-nginx-virtual-service/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-vs
  namespace: harness-delegate-ng
spec:
  host: nginx-vs
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
